--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -7,29 +7,52 @@
   padding-top: 20px;
   height: calc(100vh - 120px);
   overflow: scroll;
+  // position: relative;
   .message_main {
   color: #d37b33;
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   margin-bottom: 10px;
   }
+  .message_none {
+    margin-top: 40px;
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+    .img {
+      width: 90vw;
+    }
+  }
+  .user_nav_message {
+    color:#d37b33;
+    font-weight: bold;
+    font-size: 35px;
+    text-align: center;
+    // position: absolute;
+    // top: 270px;
+    // left: 150px;
+  }
   .user_nav.grid-8 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
     color:#d37b33;
     font-weight: bold;
     font-size: 35px;
     text-align: center;
     margin: 40px;
-    position: relative;
-    .img {
-      top: 20px;
-      width: 90%;
-      height: 70%;
-    }
-    .user_nav_message {
-      width: 600px;
-      position: absolute;
-      top: 150px;
-      left: 70px;
+    .user_nav_image {
+      position: relative;
+      .img {
+        width: 90%;
+        height: 70%;
+      }
+      .user_nav_message {
+        width: 600px;
+        position: absolute;
+        top: 150px;
+        left: 70px;
+      }
     }
   }
   .contents__post {
@@ -59,7 +82,7 @@
         color: sandybrown;
       }
       .message_image {
-        margin-left: 120px;
+        margin-left: 100px;
       }
     }
   }
