--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -1,8 +1,59 @@
-.cotents {
+.contents_show {
   margin-right: auto;
   margin-left: auto;
+  margin-top: 20px;
+  width: 80vw;
   .user_show {
-    color: skyblue;
-    border: 1px solid greenyellow;
+    color: lightsalmon;
+    font-size: 25px;
+    h2 {
+      font-size: 35px;
+      font-weight: bold;
+      letter-spacing: 0.15em;
+      color: forestgreen;
+      text-align: center;
+      margin-bottom: 5px;
+    }
+    h1 {
+      color: lightsalmon;
+      font-weight: bold;
+      border-bottom: 2px solid #99FF66;
+      margin-top: 20px;
+      font-size: 30px;
+    }
+    .user_name {
+      margin: 10px 30px;
+    }
+    .user_email {
+      margin: 5px 30px;
+    }
+  }
+  .content_show {
+    margin-top: 40px;
+    h1 {
+      font-weight: bold;
+      font-size: 30px;
+      border-bottom: 2px solid #99FF66;
+      color: skyblue;
+    }
+    .content_info {
+      color: lightskyblue;
+      margin: 10px 15px;
+      font-size: 25px;
+      p {
+        margin: 10px 15px;
+       }
+      .except {
+        letter-spacing: 0.15em;
+        color: crimson;
+        width: 80vw;
+      }
+      .img {
+        margin-top: 10px;
+      }
+    }
+    .content_new {
+      margin-top: 40px;
+    }
   }
 }
