--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -12,11 +12,14 @@
   .title {
     text-decoration: none;
     color: #00FF00;
+    opacity: 0.8;
     letter-spacing: 0.15em;
     font-size: 40px;
     line-height: 60px;
     font-weight: bold;
     margin: 0 50px;
+    // width: 30vw;
+    // height: 20vh;
   }
   .user_nav.grid-6 {
     display: flex;
