--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,24 +2,28 @@
   .message_main 3行ポジティブ日記 〜ポジティブなことを書き出そう！〜
   - if user_signed_in?
     .user_nav.grid-7
-      - @messages.each do |message|
-        .contents__post 
-          %ul.text_list
-            %li.message_text1
-              = message.text1
-            %li.message_text2
-              = message.text2
-            %li.message_text3
-              = message.text3
-          .message_info
-            .message_time
-              = message.created_at.strftime("%Y年%m月%d日")
-            .message_image
-              = image_tag message.image.url, size: "55x55", alt: "face", claas: "face_image"
-              -# = message.image
+      - if @messages.length > 0
+        - @messages.each do |message|
+          .contents__post 
+            %ul.text_list
+              %li.message_text1
+                = message.text1
+              %li.message_text2
+                = message.text2
+              %li.message_text3
+                = message.text3
+            .message_info
+              .message_time
+                = message.created_at.strftime("%Y年%m月%d日")
+              .message_image
+                = image_tag message.image.to_s, size: "55x55", alt: "face",claas: "face_image"
+      - else
+        .message_none
+          = image_tag 'book.jpeg', alt: "画像", class: "img"
+        .user_nav_message
+          日々のdiaryを記録していこう！
   - else 
     .user_nav.grid-8
       .user_nav_image
         = image_tag 'diary.jpeg', alt: "画像", class: "img"
-      .user_nav_message
-        新規登録をして3行ポジティブ日記を始めよう！
+        .user_nav_message 新規登録をして3行ポジティブ日記を始めよう！
