--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,16 +1,22 @@
 .contents
   .message_main 〜今日あったポジティブなことを書こう！〜
   .contents__form
-    = form_with model: @message, html: {class: "form_box"}, local: true do |f|
+    = form_with model: @message, html: {class: "form_box"}, local: true, multipart: true do |f|
       .form_field
         = f.text_area :text1, class: "message_text", placeholder: "keep a diary"
         = f.text_area :text2, class: "message_text", placeholder: "keep a diary"
         = f.text_area :text3, class: "message_text", placeholder: "keep a diary"
-      .message_main ~今日の気分はどんな感じ？ 左のボックスから選ぼう！〜
+      .message_main ~今日の気分は？ ボックスから選ぼう！〜
       .facemarc
+        .select_form
+          .select_box
+            = f.label :image, "facemarc", class: 'form_img' 
+            = f.select :image, [["悪い", "bad.png"],["悲しい", "sad.png"],["普通", "nomal.png"],["ハッピー", "happy.png"],["最高", "heart.png"]], selected: "nomal.png", class: "face_select", required: true 
+          .select_box
+            = f.fields_for :mood do |i| 
+              = i.label :status, "気分", class: 'form_img' 
+              = i.select :status, [["悪い", 1],["悲しい", 2],["普通", 3],["ハッピー", 4],["最高", 5]], selected: 3,  required: true, class: "face_select" 
         %ul.facemarc_list
-          = f.select :image, [["悪い", "bad.png"],["悲しい", "sad.png"],["普通", "nomal.png"],["ハッピー", "happy.png"],["最高", "heart.png"]], selected: "nomal.png", class: "face_select", required: true
-          -# = f.select :image, [["悪い", 1],["悲しい", 2],["普通", 3],["ハッピー", 4],["最高", 5]], selected: 3, class: "face_select", required: true
           %li.heart
             = image_tag 'heart.png', size: "80x80", alt: "画像", class: "face"
             * 最高 *
