--- a/app/views/moods/index.html.haml
+++ b/app/views/moods/index.html.haml
@@ -1,4 +1,24 @@
 .contents
   .message_main 〜毎日の気分の波をチェックしよう！〜
   .mood_chart
-    = line_chart Mood.group(:status).count
+    = line_chart @mood.group_by_day(:created_at).sum(:status), min: 0, max: 5, xtitle: "日付", ytitle: "気分", width: "600px", height: "450px"
+    -# , discrete: true
+  .message_main
+    〜Facemarcと気分の数値〜
+  .facemarc_chart
+    %ul.facemarc_list
+      %li.heart
+        = image_tag 'heart.png', size: "70x70", alt: "画像", class: "face"
+        * 5 *
+      %li.happy
+        = image_tag 'happy.png', size: "70x70", alt: "画像", class: "face"
+        * 4 *
+      %li.nomal
+        = image_tag 'nomal.png', size: "70x70", alt: "画像", class: "face"
+        * 3 *
+      %li.sad
+        = image_tag 'sad.png', size: "70x70", alt: "画像", class: "face"
+        * 2 *
+      %li.bad
+        = image_tag 'bad.png', size: "70x70", alt: "画像", class: "face"
+        * 1 *
