--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -26,4 +26,4 @@
     .user_nav.grid-8
       .user_nav_image
         = image_tag 'diary.jpeg', alt: "画像", class: "img"
-        .user_nav_message 新規登録をして3行ポジティブ日記を始めよう！
+        .user_nav_message 新規登録をしてLikeNoteを始めよう！
