--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,6 +16,7 @@
         %p テーマ：3行ポジィティブ日記
         %p ・日記を書くのように、今日あったポジティブなことを3つ書き出そう。
         %p ・今日の気分を5つのフェイスマークから選んで記録しよう！選んだフェイスマークは、グラフ化されて日々の気分の波がチェックできる！
+        %p ・diaryは、1日1回記録しよう！同じ日に何度も記録するとグラフに影響します。
         %p ○フッター部分の説明です。それぞれのアイコンは以下の意味です。
         .content_image
           = image_tag 'footer.png', size: "700x70", alt: "画像", class: "img"
