--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -42,16 +42,17 @@
     text-align: center;
     margin: 40px;
     .user_nav_image {
+      width: 90vw;
       position: relative;
       .img {
         width: 90%;
         height: 70%;
       }
       .user_nav_message {
-        width: 600px;
+        // width: 600px;
         position: absolute;
         top: 150px;
-        left: 70px;
+        left: 90px;
       }
     }
   }
