--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,7 +15,7 @@
       .content_info
         %p テーマ：3行ポジィティブ日記
         %p ・日記を書くのように、今日あったポジティブなことを3つ書き出そう。
-        %p ・今日の気分を5つのフェイスマークから選んで記録しよう！選んだフェイスマークは、グラフ化されて日々の気分の波がチェックできる！
+        %p ・今日の気分を5つのfacemarkから選んで記録しよう！選んだフェイスマークは、グラフ化されて日々の気分の波がチェックできる！
         %p ・diaryは、1日1回記録しよう！同じ日に何度も記録するとグラフに影響します。
         %p ○フッター部分の説明です。それぞれのアイコンは以下の意味です。
         .content_image
@@ -23,6 +23,6 @@
           %p.except --記録一覧 -- 新規投稿 --- グラフ --- マイページ 
         -# 詳しい説明と画像
         .content_new
-          %p ○投稿部分の説明です。その時の気分を下のfacemarcを基準に選ぼう。
+          %p ○投稿部分の説明です。その時の気分を下のfacemarkを基準に選ぼう。
           = image_tag 'new.png', size: "600x350", alt: "画像", class: "img"
-          %p ・赤枠で囲んでいるfacemarcと気分の二つの選択ボックスは同じものを選ぼう。異なる選択肢を選択すると、実際のdiaryとグラフが異なってしまうので注意しましょう。
+          %p ・赤枠で囲んでいるfacemarkと気分の二つの選択ボックスは同じものを選ぼう。異なる選択肢を選択すると、実際のdiaryとグラフが異なってしまうので注意しましょう。
