--- a/app/views/moods/index.html.haml
+++ b/app/views/moods/index.html.haml
@@ -4,7 +4,7 @@
     -# = line_chart @mood.group_by_day(:created_at, format: "%m月%d日", series: false ).sum(:status), min: 0, max: 5, xtitle: "日付", ytitle: "気分", width: "600px", height: "450px", discrete: true
     = line_chart @mood.chart_date, min: 0, max: 5, xtitle: "日付", ytitle: "気分", width: "600px", height: "450px", discrete: true
   .message_main
-    〜Facemarcと気分の数値〜
+    〜Facemarkと気分の数値〜
   .facemarc_chart
     %ul.facemarc_list
       %li.heart
