--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -5,6 +5,10 @@
   margin-top: 30px;
   margin-bottom: 20px;
 }
+.chart_img {
+  width: 70vw;
+  height: 60nh;
+}
 .facemarc_chart {
   margin-top: 10px;
   margin-left: auto;
